prevent submit button from shrinking during save animation

--- a/src/app/common/components/shadowbox-header/shadowbox-header.component.scss
+++ b/src/app/common/components/shadowbox-header/shadowbox-header.component.scss
@@ -154,9 +154,9 @@ m-shadowboxHeader {
       }
     }
   }
-  .m-shadowboxHeader__wrapper {
-    @include m-theme() {
-      box-shadow: none;
-    }
-  }
+  // .m-shadowboxHeader__wrapper {
+  //   @include m-theme() {
+  //     box-shadow: none;
+  //   }
+  // }
 }
