--- a/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.scss
+++ b/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.scss
@@ -150,6 +150,10 @@ button {
     }
   }
 }
+.m-shadowboxSubmitButton__status--unsaved {
+  font-size: 15px;
+  line-height: 20px;
+}
 
 @media screen and (max-width: $max-mobile) {
   m-shadowboxSubmitButton {
