--- a/src/app/modules/wallet/v2/phone-verification/phone-verification.component.scss
+++ b/src/app/modules/wallet/v2/phone-verification/phone-verification.component.scss
@@ -1,9 +1,11 @@
 m-walletPhoneVerification {
   .m-walletModal__footnote {
-    .m-walletPhoneVerification__formStatusCodeSent {
-      margin-bottom: 6px;
+    div {
       @include m-theme() {
         color: themed($m-grey-800);
+      }
+      &:first-child {
+        margin-bottom: 8px;
       }
     }
   }
@@ -12,18 +14,23 @@ m-walletPhoneVerification {
     .m-phoneInput__countryList {
       max-height: 124px;
     }
+    .m-phoneInput__wrapper {
+      @media screen and (max-width: $max-mobile) {
+        min-width: 200px;
+      }
+    }
   }
 
-  m-shadowboxSubmitButton {
-    width: 147px;
-    button {
-      width: 100%;
-    }
-  }
+  // m-shadowboxSubmitButton {
+  //   width: 147px;
+  //   button {
+  //     width: 100%;
+  //   }
+  // }
   @media screen and (max-width: 771px) {
-    m-shadowboxSubmitButton {
-      margin: 0 0 21px 0;
-    }
+    // m-shadowboxSubmitButton {
+    //   margin: 0 0 21px 0;
+    // }
     .stretchedField {
       .m-walletForm__row--label m-tooltip {
         .m-tooltip--bubble {
@@ -31,6 +38,7 @@ m-walletPhoneVerification {
           width: 174px;
         }
       }
+      // TODOOJM look into this
       [class*='m-walletForm__row'] {
         &:not(.m-phoneInput__wrapper) {
           flex-flow: row wrap;
