--- a/src/app/modules/wallet/v2/settings-cash/cash-bank-form/cash-bank-form.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/cash-bank-form/cash-bank-form.component.html
@@ -67,9 +67,9 @@
         </div>
       </div>
       <!-- ERROR -------------- -->
-      <div class="m-walletForm__error">
-        <p>{{ error }}</p>
-      </div>
+      <p class="m-walletTertiaryText--error">
+        {{ error }}
+      </p>
       <!-- FORM BUTTONS -------------- -->
       <div class="m-walletForm__buttonsContainer">
         <m-shadowboxSubmitButton
@@ -104,7 +104,7 @@
       </div>
 
       <!-- <div class="m-walletSettingsView--hasAccount__leaveMonetization">
-        <h4>Leave Monetization Program</h4>
+        <h2>Leave Monetization Program</h2>
         <p>
           For security reasons, you won't be able to rejoin the monetization
           program.
