--- a/src/app/modules/wallet/v2/settings-cash/cash-onboarding/cash-onboarding.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/cash-onboarding/cash-onboarding.component.html
@@ -270,9 +270,9 @@
 
       <!-- ------------------------------------------------------------ -->
       <!-- ERROR -------------- -->
-      <div class="m-walletForm__error">
-        <p>{{ error }}</p>
-      </div>
+      <p class="m-walletTertiaryText--error">
+        {{ error }}
+      </p>
 
       <!-- FORM BUTTONS -------------- -->
       <div class="m-walletForm__buttonsContainer">
