--- a/src/app/modules/wallet/v2/dashboard.component.html
+++ b/src/app/modules/wallet/v2/dashboard.component.html
@@ -22,7 +22,7 @@
           ></m-shadowboxHeader__tabs>
           <div class="m-shadowboxLayout__body">
             <div
-              class="m-walletDashboardBalances__wrapper"
+              class="m-walletDashboardBalance__wrapper"
               *ngIf="
                 activeCurrencyId === 'tokens' || activeCurrencyId === 'cash'
               "
@@ -66,7 +66,7 @@
               </div>
               <div class="m-walletDashboardViews__viewsContainer">
                 <m-walletChart
-                  class="m-walletDashboardViews__view m-walletDashboardViews__view--overview"
+                  class="m-walletDashboardViews__view"
                   *ngIf="
                     activeCurrencyId === 'tokens' && activeViewId === 'overview'
                   "
@@ -85,6 +85,7 @@
                   <div class="m-walletDashboardSettings__wrapper">
                     <m-walletSettings--tokens
                       class="m-walletDashboardViews__view"
+                      [wallet]="wallet"
                       *ngIf="activeCurrencyId === 'tokens'"
                       (onchainAddressChanged)="onchainAddressChanged()"
                     ></m-walletSettings--tokens>
